feat/db: repository pattern Applied
ADD Entities for basis
ADD Repository for AuthPhone
TEST basic db connection and AuthPhoneRepository
-- COVERED

TODO - rest entities, repositories, BL for Phone Authentication

--- a/package.json
+++ b/package.json
@@ -4,21 +4,26 @@
   "private": true,
   "scripts": {
     "start": "ts-node ./src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
+    "migrate": "npm run typeorm migration:create -- -c production -n NewMigration"
   },
   "author": "hubtwork <hubtwork@gmail.com> (http://github.com/Hubtwork)",
   "license": "ISC",
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.23",
     "@types/mysql": "^2.15.18",
     "@types/node": "^14.14.41",
+    "jest": "^26.6.3",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
+    "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
@@ -27,7 +32,28 @@
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
+    "ts-jest": "^26.5.5",
     "typeorm": "^0.2.32",
     "winston": "^3.3.3"
+  },
+  "jest": {
+    "testPathIgnorePatterns": [
+      "<rootDir>/node_modules/"
+    ],
+    "transform": {
+      "^.+\\.ts$": "ts-jest"
+    },
+    "testRegex": "\\.test\\.ts$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "json"
+    ],
+    "globals": {
+      "ts-jest": {
+        "diagnostics": true
+      }
+    }
   }
 }
