--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.23",
+    "@types/lodash": "^4.14.168",
     "@types/mysql": "^2.15.18",
     "@types/node": "^14.14.41",
     "jest": "^26.6.3",
+    "lodash": "^4.17.21",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   },
