feat/db: smsService implementation
ADD SmsService from ncp-client module
ADD BusinessLogic for smsVerification Service

TODO - Controller for authentification

--- a/.gitignore
+++ b/.gitignore
@@ -166,5 +166,6 @@ Temporary Items
 *.code-workspace
 
 # jwt secrets, etc.
+sample.ts
 
 # End of https://www.toptal.com/developers/gitignore/api/osx,node,vscode
