feat/sms: sms Service / token Service / base auth Logic implemented
ADD sms Service via ncp-client
CHANGE project structure by Grouping
ADD token Service with JWT
ADD token Service test and sms Service test ( code generation randomizing ability test )

ALL COVERED repositories / token, sms

TODO - authentication flow build

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -68,6 +68,6 @@
     "skipLibCheck": true,                           /* Skip type checking of declaration files. */
     "forceConsistentCasingInFileNames": true        /* Disallow inconsistently-cased references to the same file. */
   },
-  "include": ["./src/**/*", "./config/**/*", "bin/www.ts", "ormconfig.ts", "UnitTest"],
-  "exclude": ["./__test__"]
+  "include": ["./src/**/*", "./config/**/*", "bin/www.ts", "ormconfig.ts", "./src/__test__"],
+  "exclude": [""]
 }
