--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.23",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/lodash": "^4.14.168",
     "@types/mysql": "^2.15.18",
     "@types/node": "^14.14.41",
@@ -60,7 +61,7 @@
       }
     },
     "setupFilesAfterEnv": [
-      "<rootDir>/__test__/setup.ts"
+      "<rootDir>/src/__test__/setup.ts"
     ]
   }
 }
