--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/jsonwebtoken": "^8.5.1",
     "@types/lodash": "^4.14.168",
     "@types/morgan": "^1.9.2",
+    "@types/multer": "^1.4.5",
+    "@types/multer-s3": "^2.7.9",
     "@types/mysql": "^2.15.18",
     "@types/node": "^14.14.41",
     "jest": "^26.6.3",
@@ -26,6 +28,7 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "aws-sdk": "^2.906.0",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
@@ -35,8 +38,11 @@
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "express-winston": "^4.1.0",
+    "fs": "*",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "mysql": "^2.18.1",
     "ncp-client": "^1.1.2-a",
     "reflect-metadata": "^0.1.13",
